--- a/TestDependencies/build.gradle
+++ b/TestDependencies/build.gradle
@@ -24,8 +24,8 @@ buildscript {
 apply plugin: 'moe'
 
 // Set source and target to Java 8
-sourceCompatibility = "1.8"
-targetCompatibility = "1.8"
+sourceCompatibility = "1.7"
+targetCompatibility = "1.7"
 
 // Set maven repository
 repositories {
@@ -56,29 +56,14 @@ dependencies {
     // Compile with 'jar' files in the project's 'lib' directory
     compile fileTree(dir: 'lib', include: '*.jar')
 
-    compile "xmlpull:xmlpull:1.1.3.1"
-    compile "commons-io:commons-io:2.4"
-    compile "com.google.guava:guava:18.0"
-    compile "org.slf4j:slf4j-api:1.7.9"
-    compile "com.squareup.retrofit:retrofit:1.9.0"
-    compile "com.squareup.okhttp:okhttp:2.3.0"
-    compile "com.google.code.gson:gson:2.3.1"
-    compile "com.google.code.findbugs:jsr305:2.0.1"
-    compile "com.googlecode.libphonenumber:libphonenumber:7.0.8"
-    compile "joda-time:joda-time:2.7"
-    compile "org.joda:joda-convert:1.7"
-    compile "org.ocpsoft.prettytime:prettytime:4.0.1.Final"
-    compile "org.apache.commons:commons-collections4:4.0"
-    compile "org.apache.commons:commons-math3:3.4.1"
-    compile "nf.fr.eraasoft:objectpool:1.1.2"
+    compile 'org.apache.httpcomponents:httpclient:4.5.2'
+    compile "javax.servlet:javax.servlet-api:3.1.0"
+    compile "log4j:log4j:1.2.17"
+    compile "org.apache.avalon.framework:avalon-framework-api:4.3.1"
+    compile "org.apache.avalon.logkit:avalon-logkit:2.2.1"
+    compile "com.google.appengine:appengine-api-1.0-sdk:1.9.17"
 
-    // test dependencies
-    testCompile "org.mockito:mockito-all:1.10.19"
-    testCompile "org.ogce:xpp3:1.1.6"
-    testCompile 'com.nanohttpd:nanohttpd-webserver:2.1.1'
-    testCompile "org.testng:testng:6.9.9"
-    testCompile "junit:junit:4.11"
-    testCompile "ch.qos.logback:logback-classic:1.1.2"
+
 
 }
 
