--- a/TestDependencies/build.gradle
+++ b/TestDependencies/build.gradle
@@ -57,13 +57,8 @@ dependencies {
     compile fileTree(dir: 'lib', include: '*.jar')
 
     compile 'org.apache.httpcomponents:httpclient:4.5.2'
+    compile 'io.reactivex:rxjava:1.1.5'
     compile "javax.servlet:javax.servlet-api:3.1.0"
-    compile "log4j:log4j:1.2.17"
-    compile "org.apache.avalon.framework:avalon-framework-api:4.3.1"
-    compile "org.apache.avalon.logkit:avalon-logkit:2.2.1"
-    compile "com.google.appengine:appengine-api-1.0-sdk:1.9.17"
-
-
 
 }
 
